# tally-cli

./: .gitignore  CLAUDE.md  CLI_COMPREHENSIVE_REVIEW.md  CLI_SDK_COVERAGE_PLAN.md  Cargo.toml  GLOBAL_DELEGATE_REFACTOR.md  MIGRATION_GUIDE.md  README.md  RECURRING_PAYMENTS_ARCHITECTURE.md  Taskfile.yml  WALLETS.md
src/: config.rs  config_file.rs  errors.rs  lib.rs  main.rs
src/commands/: cancel_subscription.rs  close_subscription.rs  completions.rs  config_file_ops.rs  create_payment_terms.rs  create_plan.rs  dashboard.rs  deactivate_plan.rs  init_config.rs  init_merchant.rs  init_payee.rs  init_wizard.rs  list_agreements.rs  list_payment_terms.rs  list_plans.rs  list_subs.rs  mod.rs  renew_subscription.rs  show_agreement.rs  show_config.rs  show_merchant.rs  show_payee.rs  show_subscription.rs  start_subscription.rs  update_plan_terms.rs  withdraw_fees.rs
src/commands/simulate_events/: mod.rs  tests.rs
src/utils/: colors.rs  formatting.rs  mod.rs  progress.rs
