[package]
name = "tally-cli"
version = "0.1.0"
edition = "2021"

[lints.rust]
# Forbid unsafe code in CLI too
unsafe_code = "forbid"

[lints.clippy]
# Standard safety lints but allowing for clap derive macros
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

[[bin]]
name = "tally-cli"
path = "src/main.rs"

[lib]
name = "tally_cli"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
base64 = "0.22"
borsh = "1.5"
clap = { version = "4", features = ["derive"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tally-sdk = { path = "../tally-protocol/sdk", features = ["platform-admin"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "fs", "net"] }
tokio-tungstenite = "0.24"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
url = "2.5"

[dev-dependencies]
tempfile = "3"
